tests/externInfo/dhrystone-exported/db/invalid/path/Proc5.c.ttp
./db/invalid/path/Proc5.c : 68.8-68.17 : -- value at line 68, column 8 --# # Char1Glob ; unsigned char ; {0}#  #-- value at line 69, column 8 --# #                                     Char1Glob ; unsigned char ; {65} /\ != 0# 
./db/invalid/path/Proc5.c : 69.8-69.15 : -- value at line 69, column 8 --# # counter ; signed int ; {272} /\ != 0#  #-- value at line 70, column 8 --# # counter ; signed int ; {313} /\ != 0# 
./db/invalid/path/Proc5.c : 70.8-70.16 : -- value at line 70, column 8 --# # BoolGlob ; signed int ; {0}# 
